appId: com.casper3.f-tracking-app
---
- tapOn: "Back"
- waitForAnimationToEnd
- tapOn:
    point: "25%,93%"
- waitForAnimationToEnd
- tapOn: "Всі, 1"
- waitForAnimationToEnd
- tapOn:
    point: "50%,61%"
- waitForAnimationToEnd
- tapOn: "Запустити таймер"
- waitForAnimationToEnd
- takeScreenshot: /Users/a1d/Desktop/Pets/Flowi/flowi-mobile-app/.artifacts/rn-native/a11y/10-timer-on
